# lidar_snow_removal

./: Bag_File_Info.txt  CMakeLists.txt  LICENSE-MIT  README.md  package.xml  references.bib
config/: bounding_box_filter.yaml
filter_point_cloud/: CMakeLists.txt  CMakeLists.txt~  READ_ME.txt  READ_ME.txt~  package.xml
filter_point_cloud/launch/: filter.launch  filter.launch~  metascan_husky_viewer.launch  metascan_husky_viewer.launch~  pass_through_filter.launch  pass_through_filter.launch~  segmentation.launch~  segmentation2.launch  segmentation2.launch~  spawn_husky.launch~
filter_point_cloud/rviz_config/: model1.rviz  model2.rviz
filtering_snow/: CMakeLists.txt  CMakeLists.txt~  package.xml  rviz_config.rviz  rviz_config_planview.rviz  rviz_config_rearview.rviz
filtering_snow/config/: ground_segmentation_params.yaml  rviz_config.rviz  rviz_configDROR.rviz  rviz_configRAW.rviz  rviz_configROR.rviz  rviz_configSTATS.rviz  rviz_configVOX.rviz
filtering_snow/include/: DROR.h  remove_ground.hpp
filtering_snow/launch/: filter_ROR_DROR_Cropbox.launch  filter_all.launch  filter_custom_radius.launch  filter_dynamic_radius.launch  filter_dynamic_radius2.launch  filter_radius.launch  filter_stats.launch  filter_voxel.launch  follow_car.launch
filtering_snow/scripts/: calculate_rates.py  outputfile.txt  radius_filter_process_rates - 20 points.txt  radius_filter_process_rates - 60 points.txt  radius_filter_process_times - 20 points.txt  radius_filter_process_times.txt  run_filters.sh
filtering_snow/src/: DROR.cpp  cropBoxFilter.cpp  dynamicRadiusOutlierFilter.cpp  radiusOutlierFilter.cpp  radiusOutlierFilterCustom.cpp  remove_ground.cpp  restamp_tf.cpp  statsOutlierFilter.cpp  voxelGridFilter.cpp
include/: DROR.h
launch/: filter_all.launch  filter_dynamic_radius.launch  filter_radius.launch  filter_stats.launch  filter_voxel.launch
pcl_custom/: CMakeLists.txt  package.xml
pointcloudviewer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pointXYZIRNLRGB_cloud_viewer_main
pointcloudviewer/include/: data_model.hpp  point_types.h
pointcloudviewer/src/: data_model.cpp  pointXYZIRNLRGB_cloud_viewer_main.cpp
scripts/: calculate_rates.py
src/: DROR.cpp  cropBoxFilter.cpp  dynamicRadiusOutlierFilter.cpp  statsOutlierFilter.cpp
