<?xml version="1.0"?>
<package>
  <name>filter_point_cloud</name>
  <version>0.0.0</version>
  <description>The filter_point_cloud package takes a point cloud that is being published to /cloud_pcd and filters it using a radius outlier filter nodelet and also a voxel filter nodelet.</description>

  <maintainer email="ncharron@todo.todo">ncharron</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
