<?xml version="1.0"?>
<package format="2">
  <name>filtering_snow</name>
  <version>1.0.0</version>
  <description>The filtering_snow package subscribes to incoming velodyne point
  cloud messages and runs various filter types with the goal of testing the
  ability of these filters to remove snow and improve Lidar based SLAM. </description>
  <maintainer email="nicholas.c.charron@gmail.com">Nick Charron</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl-pcl-1.8.1</build_depend>
  <!-- <build_depend>libpcl-all-dev</build_depend> -->
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl-pcl-1.8.1</exec_depend>
  <!-- <exec_depend>libpcl-all</exec_depend> -->

  <export>

  </export>
</package>
